--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,27 +27,28 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   
-  execute_sam:
-    name: Build and Deploy SAM
-    runs-on: ubuntu-latest
-    needs: [setup_node]
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Build and Deploy SAM
-      run: |
-        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
-        sam build
-        sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+#  execute_sam:
+#    name: Build and Deploy SAM
+#    runs-on: ubuntu-latest
+#    needs: [setup_node]
+#    steps:
+#    - name: Checkout
+#      uses: actions/checkout@v2
+#    - name: Build and Deploy SAM
+#      run: |
+#        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+ #       sam build
+ #       sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+ #   env:
+ #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+ #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+ #     AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
 
   testing_customer_endpoint:
     name: Testing Customer Endpoints
     runs-on: ubuntu-latest
+    needs: [setup_node]
     steps:
     - name: Checkout
       uses: actions/checkout@v2      
@@ -62,6 +63,7 @@ jobs:
   testing_product_endpoint:
     name: Testing Product Endpoints
     runs-on: ubuntu-latest
+    needs: [setup_node]
     steps:
     - name: Checkout
       uses: actions/checkout@v2      
@@ -76,6 +78,7 @@ jobs:
   testing_company_endpoint:
     name: Testing Company Endpoints
     runs-on: ubuntu-latest
+    needs: [setup_node]
     steps:
     - name: Checkout
       uses: actions/checkout@v2      
@@ -90,6 +93,7 @@ jobs:
   testing_budget_endpoint:
     name: Testing Budget Endpoints
     runs-on: ubuntu-latest
+    needs: [setup_node]
     steps:
     - name: Checkout
       uses: actions/checkout@v2      
